--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
-<h1>All Articles</h1>
-<%= link_to "Create a New Article", new_article_path, class: "new_article" %>
+<h1>Our Posts</h1>
+<%= link_to " New Post", new_article_path, class: "new_article" %>
 
 <ul id="articles">
   <% @articles.each do |article| %>
