--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,3 +1,4 @@
+<% if logged_in? %>
 <%= form_for(@article) do |f| %>
   <ul>
   <% @article.errors.full_messages.each do |error| %>
@@ -17,7 +18,16 @@
   <%= f.text_field :tag_list %>
 </p>
 
+<p>
+  <% if @article.image.exists? %>
+      <%= image_tag @article.image.url %><br/>
+  <% end %>
+  <%= f.label :image, "Attach a New Image" %><br />
+  <%= f.file_field :image %>
+</p>
+
   <p>
     <%= f.submit %>
   </p>
+<% end %>
 <% end %>
