--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,13 +1,14 @@
+<% if logged_in? %>
 <h3>Comments (<%= @article.comments.size %>)</h3>
 <br></br>
 <h1><%= @article.title %></h1>
-
+<p><%= image_tag @article.image.url %></p>
 <p><%= @article.body %>
-  <% if logged_in? %>
+
   <%= link_to "edit", edit_article_path(@article) %>
   <%= link_to "delete", article_path(@article), method: :delete,data: {confirm: "Really delete the article?"}%>
   <%= link_to "<< Back to Articles List", articles_path %>
-  <% end %>
+
 </p>
 
 <h3>Post a Comment</h3>
@@ -22,3 +23,4 @@
     <%= link_to tag.name, tag_path(tag) %>
   <% end %>
 </p>
+<% end %>
