--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,4 @@
-<h1>Edit an Article</h1>
-
+<% if logged_in? %>
 <%= form_for(@article) do |f| %>
   <ul>
   <% @article.errors.full_messages.each do |error| %>
@@ -14,7 +13,21 @@
     <%= f.label :body %><br />
     <%= f.text_area :body %>
   </p>
+<p>
+  <%= f.label :tag_list %><br />
+  <%= f.text_field :tag_list %>
+</p>
+
+<p>
+  <% if @article.image.exists? %>
+      <%= image_tag @article.image.url %><br/>
+  <% end %>
+  <%= f.label :image, "Attach a New Image" %><br />
+  <%= f.file_field :image %>
+</p>
+
   <p>
-    <%= f.submit %>
+    <%= f.submit 'Update'%>
   </p>
+<% end %>
 <% end %>
