--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -18,13 +18,13 @@
   <%= f.text_field :tag_list %>
 </p>
 
-<p>
-  <% if @article.image.exists? %>
-      <%= image_tag @article.image.url %><br/>
-  <% end %>
-  <%= f.label :image, "Attach a New Image" %><br />
-  <%= f.file_field :image %>
-</p>
+<!-- <p> -->
+<!--   <% if @article.image.exists? %> -->
+<!--       <%= image_tag @article.image.url %><br/> -->
+<!--   <% end %> -->
+<!--   <%= f.label :image, "Attach a New Image" %><br /> -->
+<!--   <%= f.file_field :image %> -->
+<!-- </p> -->
 
   <p>
     <%= f.submit 'Update'%>
