--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,7 +2,7 @@
 <h3>Comments (<%= @article.comments.size %>)</h3>
 <br></br>
 <h1><%= @article.title %></h1>
-<p><%= image_tag @article.image.url %></p>
+<!-- <p><%= image_tag @article.image.url %></p> -->
 <p><%= @article.body %>
 
   <%= link_to "edit", edit_article_path(@article) %>
